<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
            android:id="@+id/name"
            android:text="@string/name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
    <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/launch"
                android:text="@string/launch"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        <TextView
                android:id="@+id/launch_date"
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/landing"
                android:text="@string/landing"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        <TextView
                android:id="@+id/landing_date"
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
    </LinearLayout>

    <TextView
            android:id="@+id/hide"
            android:text="@string/hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAction"/>
</LinearLayout>